bugzilla (https://bugs.kde.org/enter_bug.cgi?product=valgrind) rather than
mailing the developers (or mailing lists) directly -- bugs that are
not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

247386  make perf does not run all performance tests
270006  Valgrind scheduler unfair 
270796  s390x: Removed broken support for the TS insn
271438  Fix configure for proper SSE4.2 detection
273114  s390x: Support TR, TRE, TROO, TROT, TRTO, and TRTT instructions
276993  fix mremap 'no thrash checks' 
281482  valgrind's memcheck incorrect byte allocation count in realloc() for silly argument
282230  group allocator for small fixed size, use it for MC_Chunk/SEc vbit
283413  Fix wrong sanity check
283671  Robustize alignment computation in LibVEX_Alloc
286270  vgpreload is not friendly to 64->32 bit execs, gives ld.so warnings
286374  Running cachegrind with --branch-sim=yes on 64-bit PowerPC program fails
287260  Incorrect conditional jump or move depends on uninitialised value(s)
287858  VG_(strerror): unknown error 
289699  vgdb connection in relay mode erroneously closed due to buffer overrun 
289939  wish: complete monitor cmd 'leak_check' with details about leaked or reachable blocks
290655  Add support for AESKEYGENASSIST instruction 
290974  vgdb must align pages to VKI_SHMLBA (16KB) on ARM 
293088  Add some VEX sanity checks for ppc64 unhandled instructions
294055  regtest none/tests/shell fails when locale is not set to C
294190  --vgdb-error=xxx can be out of sync with errors shown to the user
295799  Missing \n with get_vbits in gdbserver when line is % 80 and there are some unaddressable bytes 
n-i-bz  s390x: Shadow registers can now be examined using vgdb
297078  gdbserver signal handling problems caused by diff vki nr/gdb nr
        and non reset of "C-ontinued" signal
297991  Valgrind interferes with mmap()+ftell() 